Fix header padding (spacing)

--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ header nav ul li {
 
 header nav ul li a {
     display: block;
-    padding: calc((var(--header-height) - .9em) / 2) 10px;
+    padding: calc((var(--header-height) - 1.5em) / 2) 10px;
     text-align: center;
 
     font-family: var(--header-font);
